# neko_src

actuator_lib/include/actuator_lib/: GenericActuatorImpl.h.gch  GenericComponent.h  Motor.h  actuator.h  actuator_msgs_extension.h  actuator_msgs_extention.h.gch
actuator_lib/msg/: KondoServoFeedbackMsg.msg
actuator_lib/src/: KondoServo.cpp
body_lib/: CMakeLists.txt  package.xml
body_lib/include/body_lib/: Body.h  body.h
body_lib/msg/: BodyCommandMsg.msg  ProcessedFeedbackMsg.msg
body_lib/src/: Body.cpp  FeedbackProcessor.cpp  MotionController.cpp  Part.cpp
body_msgs/: CMakeLists.txt  package.xml
body_msgs/msg/: PartCommandMsg.msg  PartMsg.msg  ProcessedFeedbackMsg.msg
component_lib/: CMakeLists.txt  package.xml
component_lib/include/component_lib/: component.h  component_impl.h  component_lib.h  component_lib_impl.h  component_lib_impl.h.gch  component_msgs.h  component_msgs_extension.h
component_lib/msg/: GenericComponentMsg.msg  KondoServoCommandMsg.msg  KondoServoFeedbackMsg.msg  KondoServoGeneralMsg.msg  MotorCommandMsg.msg  MotorFeedbackMsg.msg  MotorGeneralMsg.msg
component_lib/src/: Component.cpp  KondoServo.cpp  Motor.cpp
controller/: CMakeLists.txt
controller/src/: FpNode.cpp
controller_lib/: CMakeLists.txt  package.xml
controller_lib/action/: MotionControll.action
controller_lib/include/controller_lib/: body.h
controller_lib/msg/: BodyMsg.msg
core_lib/: CMakeLists.txt  package.xml
core_lib/include/core_lib/: Core.h
jcatty_action/: CMakeLists.txt  package.xml
jcatty_actuator_lib/include/jcatty_lib/: DCmotor.h  KondoServo.h
jcatty_actuator_lib/src/: DCmotor.cpp  FourierSeries.cpp  KondoServo.cpp  Part.cpp
jcatty_body_lib/: CMakeLists.txt  package.xml
jcatty_body_lib/include/jcatty_body_lib/: Body.h  MotionController.h
jcatty_body_lib/include/jcatty_lib/: Body.h  Part.h
jcatty_body_lib/src/: FeedbackProcessor.cpp  MotionController.cpp  Part.cpp  Plot.cpp
jcatty_body_msgs/: CMakeLists.txt  package.xml
jcatty_body_msgs/msg/: PartCommandMsg.msg  PartMsg.msg
jcatty_calibration_msgs/: CMakeLists.txt  package.xml
jcatty_calibration_msgs/msg/: bodyMsg.msg  dcmotorMsg.msg  partMsg.msg
jcatty_lib/: CMakeLists.txt  package.xml
jcatty_locomotion_lib/: CMakeLists.txt
jcatty_locomotion_lib/src/: BodyCmd.cpp
jcatty_motion_lib/: CMakeLists.txt
jcatty_motion_lib/include/jcatty_lib/: CattyLocomotion.h  MotionController.h
jcatty_motion_lib/src/: MotionController.cpp
jcatty_motioncontroll_action/: CMakeLists.txt  package.xml
jcatty_motioncontroll_action/action/: MotionControll.action
jcatty_msgs/: CMakeLists.txt  package.xml
jcatty_msgs/msg/: heartrate.msg  rh_cmd.msg  rh_info.msg
jcatty_parts_lib/: CMakeLists.txt  package.xml
jcatty_parts_lib/include/jcatty_parts_lib/: BrushedMotor.h  BrushlessMotor.h  KondoServo.h  Parts.h
jcatty_parts_lib/src/: BrushedMotor.cpp  KondoServo.cpp
jcatty_parts_msgs/: CMakeLists.txt  package.xml
jcatty_parts_msgs/msg/: BrushedMotorCommandMsg.msg  BrushedMotorFeedbackMsg.msg  BrushedMotorMsg.msg  KondoServoCommandMsg.msg  KondoServoFeedbackMsg.msg
jcatty_simple_struct_msgs/: CMakeLists.txt  package.xml
jcatty_simple_struct_msgs/msg/: kondoServoMsg.msg
jcatty_support_lib/: CMakeLists.txt  package.xml
jcatty_support_lib/include/jcatty_lib/: Node.h  Plot.h  Utilities.h
jcatty_support_lib/src/: FeedbackPrcessorNode.cpp  MotionControllerNode.cpp
jcatty_teensy_msgs/: CMakeLists.txt  package.xml
jcatty_teensy_msgs/msg/: ComandMsg.msg  InfoMsg.msg
jcatty_test/: CMakeLists.txt  package.xml
jcatty_test/launch/: testWithLazyTeensy.launch  testWithPerfectTeensy.launch
jcore/: CMakeLists.txt  package.xml
jcore/src/: jcore.cpp
locomotion_lib/: CMakeLists.txt  package.xml
locomotion_lib/include/jcatty_lib/: CattyLocomotion.h
motion_controller_rh/: CMakeLists.txt  package.xml
motion_controller_rh/src/: McNodeRH.h  main.cpp
motioncontroll_action/: CMakeLists.txt  package.xml
motioncontroll_action/action/: MotionControll.action
node_lib/: CMakeLists.txt  package.xml
node_lib/include/node_lib/: .Node.h.swp  Node.h
node_lib/src/: .MotionControllerNode.cpp.swp  FeedbackProcessorNode.cpp  GenericCattyNode.cpp  HeartratePublisherNode.cpp  HeartrateSubscriberNode.cpp  MotionControllerNode.cpp  RegistrarNode.cpp
optim_test/: CMakeLists.txt  package.xml
optim_test/launch/: core.launch  test.launch  testWithLazyTeensy.launch
optim_test/src/: McNode.cpp  action_test_client_node.cpp  just_a_core.cpp  just_a_core_node.cpp  just_a_fp_node.cpp  just_a_mc_node.cpp  lazy_virtual_teensy.cpp  perfect_virtual_teensy.cpp
parts_lib/: CMakeLists.txt  package.xml
parts_lib/include/parts_lib/: BrushedMotor.h  BrushlessMotor.h  CattyParts.h  GenericParts.h  (+5 more)
parts_lib/src/: BrushedMotor.cpp  BrushlessMotor.cpp  GenericParts.cpp  GyroSensor.cpp  KondoServo.cpp  MotionSensor.cpp  Parts.cpp
parts_msgs/: CMakeLists.txt  package.xml
parts_msgs/msg/: BrushedMotorCommandMsg.msg  BrushedMotorFeedbackMsg.msg  BrushedMotorMsg.msg  BrushlessMotorCommandMsg.msg  BrushlessMotorFeedbackMsg.msg  BrushlessMotorMsg.msg  GyroSensorMsg.msg  KondoServoCommandMsg.msg  KondoServoFeedbackMsg.msg  KondoServoMsg.msg  MotionSensor.msg  MotionSensorCommandMsg.msg  MotionSensorFeedbackMsg.msg  MotionSensorMsg.msg
rh_leg_controller/: CMakeLists.txt  package.xml
rh_leg_controller/src/: FpNode.cpp  McNode.cpp  feebackNode.cpp
rh_motion_controller/: CMakeLists.txt  package.xml
rh_motion_controller/src/: McNode.cpp
support_lib/: CMakeLists.txt  package.xml
support_lib/msg/: ActionEndReporterMsg.msg  HeartrateMsg.msg
support_lib/src/: Decoder.cpp  Plot.cpp  Recoder.cpp  Utilities.cpp
support_lib/srv/: CheckIfSpecificNodeAliveSrv.srv
support_msgs/: CMakeLists.txt
support_msgs/msg/: ActionEndReporterMsg.msg  ActionStartNotifierMsg.msg  CalibrationMsg.msg  HeartrateMsg.msg
support_srvs/: CMakeLists.txt  package.xml
support_srvs/srv/: LocomotionActionStateSrv.srv  RegistrationSrv.srv
teensy_msgs/: CMakeLists.txt  package.xml
teensy_msgs/msg/: CommandMsg.msg  FeedbackMsg.msg
(+4 files in other folders)
