<?xml version="1.0"?>
<package format="2">
  <name>body_lib</name>
  <version>0.0.0</version>
  <description>The jcatty_lib package</description>
  <maintainer email="shunski@todo.todo">shunski</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>catkin</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>support_lib</build_depend>
  <build_depend>teensy_msgs</build_depend>
  <build_depend>parts_msgs</build_depend>
  <build_depend>body_msgs</build_depend>
  <build_depend>parts_lib</build_depend>
  <build_depend>motioncontroll_action</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>parts_msgs</build_export_depend> 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>parts_msgs</exec_depend>
  <exec_depend>body_msgs</exec_depend>
  <exec_depend>parts_lib</exec_depend>
  <exec_depend>motioncontroll_action</exec_depend>

  <export>
  </export>
</package>
