<?xml version="1.0"?>
<package format="2">
  <name>body_msgs</name>
  <version>0.0.0</version>
  <description>Contains messages that represent (part of) the body. These messages are used to send objects directly.</description>
  <maintainer email="shunski@todo.todo">shunski</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>parts_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>parts_msgs</exec_depend>

  <export></export>
</package>
