<?xml version="1.0"?>
<package format="2">
  <name>core_lib</name>
  <version>0.0.0</version>
  <description>The support library for the package; contains utilities and many more</description>

  <maintainer email="shunski@todo.todo">shunski</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>catkin</depend>
  <build_depend>support_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
  </export>
</package>
