<?xml version="1.0"?>
<package format="2">
  <name>jcatty_body_lib</name>
  <version>0.0.0</version>
  <description>The jcatty_lib package</description>

  <maintainer email="shunski@todo.todo">shunski</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>catkin</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>jcatty_msgs</build_depend>
  <build_depend>jcatty_action</build_depend>
  <build_depend>jcatty_parts_lib</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>jcatty_msgs</exec_depend>
  <exec_depend>jcatty_action</exec_depend>
  <exec_depend>jcatty_parts_lib</exec_depend>


  <export>
  </export>
</package>
