<?xml version="1.0"?>
<package format="2">
  <name>jcatty_msgs</name>
  <version>0.0.0</version>
  <description>A metapackage that depends all message-specialized packages needed for the catty project. </description>

  <maintainer email="shunski@todo.todo">shunski</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jcatty_parts_msgs</build_depend>
  <build_depend>jcatty_calibration_msgs</build_depend>
  <build_depend>jcatty_bodypart_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>


  <export> </export>
</package>
