<?xml version="1.0"?>
<package format="2">
  <name>jcatty_msgs</name>
  <version>0.0.0</version>
  <description>A metapackage that depends all message-specialized packages needed for the catty project. </description>

  <maintainer email="shunski@todo.todo">shunski</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>parts_msgs</exec_depend>
  <exec_depend>calibration_msgs</exec_depend>
  <exec_depend>bodypart_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export> <metapackage /> </export>
</package>
