<?xml version="1.0"?>
<package format="2">
  <name>jcatty_locomotion_lib</name>
  <version>0.0.0</version>
  <description>A jcatty library that handle its locomotion.</description>

  <maintainer email="shunski@todo.todo">shunski</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>catkin</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>jcatty_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>jcatty_msgs</exec_depend>

  <export>
  </export>
</package>
