<?xml version="1.0"?>
<package format="2">
  <name>motioncontroll_action</name>
  <version>0.0.0</version>
  <description>The motioncontroll_action package</description>
  <maintainer email="shunski@todo.todo">shunski</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>parts_msgs</build_depend>
  <build_depend>body_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
  </export>
</package>
