<?xml version="1.0"?>
<package format="2">
  <name>node_lib</name>
  <version>0.0.0</version>
  <description>The library that specifies all the node features.</description>
  <maintainer email="shunski@todo.todo">shunski</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>body_lib</build_depend>
  <build_depend>support_lib</build_depend>
  <build_depend>actuator_lib</build_depend>
  <build_depend>teensy_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>body_lib</build_export_depend>
  <build_export_depend>support_lib</build_export_depend>
  <build_export_depend>actuator_lib</build_export_depend>
  <build_export_depend>teensy_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>body_lib</exec_depend>
  <exec_depend>support_lib</exec_depend>
  <exec_depend>parts_lib</exec_depend>
  <exec_depend>teensy_msgs</exec_depend>
  <export>
  </export>
</package>
